samples/_failures_safe/1761523443_c6eec9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2af851b5.c: In function ‘main’:
./samples/SAFE/__tmp_2af851b5.c:173:26: error: ‘t’ undeclared (first use in this function)
  173 |         print_token_type(t
      |                          ^
./samples/SAFE/__tmp_2af851b5.c:173:26: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_2af851b5.c:173:27: error: expected ‘)’ at end of input
  173 |         print_token_type(t
      |                         ~ ^
      |                           )
./samples/SAFE/__tmp_2af851b5.c:173:9: error: expected declaration or statement at end of input
  173 |         print_token_type(t
      |         ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_2af851b5.c:173:9: error: expected declaration or statement at end of input
